[package]
name = "kudos"
version = "0.1.1"
edition = "2024"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[lib]
test = false

[[bin]]
name = "kudos"
test = true
bench = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 21
test-timeout = 1 
