[package]
name = "kudos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[[bin]]
name = "kudos"
path = "src/main.rs"
test = true
doctest = false
bench = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
run-args = ["-serial", "stdio"]
test-timeout = 1
test-success-exit-code = 21

[package.metadata.bootloader]
physical-memory-offset = "0x0000f00000000000"
